@@ -1,5 +1,15 @@
 2012-09-25  Beth Dakin  <bdakin@apple.com>
 
+        Build fix. I removed this function as a part of 
+        https://bugs.webkit.org/show_bug.cgi?id=95397 but it is
+        still needed for nightlies and open source builds.
+
+        * WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
+        (WKBundlePageSetPaintedObjectsCounterThreshold):
+        * WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h:
+
+2012-09-25  Beth Dakin  <bdakin@apple.com>
+
         https://bugs.webkit.org/show_bug.cgi?id=95397
         Need to merge didFirstVisuallyNonEmptyLayout and 
         didNewFirstVisuallyNonEmptyLayout
